# SpineSeg-PerfBench

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-frozen.txt
artifacts/: PROFILE_TRACE_OMITTED.md
artifacts/frozen/: ARTIFACT_INDEX.json  README.md  RUNS.md  RUN_LOG.md  SPEC.md  checksums.sha256  flops_summary.json
configs/: base.yaml  model_segresnet.yaml  model_unet.yaml  opt_all.yaml  opt_amp.yaml  opt_compile.yaml  perturb_contrast.yaml  perturb_intensity.yaml  perturb_noise.yaml  perturb_resample.yaml
scripts/: benchmark.py  build_wandb_export_report.py  check_run_state.py  compute_flops.py  demo_single_case.py  export_wandb_dashboard.py  freeze_artifacts.py  infer.py  label_distribution_audit.py  make_plots.py  make_tables.py  prepare_data.py  profile.py  replay_training_to_wandb.py  robustness.py  run_all.sh  run_controller.py  smoke_test.py  train.py  verify_artifacts.py  verify_github_submission.py
spineseg_perfbench/: __init__.py  config.py
spineseg_perfbench/data/: __init__.py  manifests.py  synthetic.py  transforms.py
spineseg_perfbench/metrics/: __init__.py  dice.py  hd95.py
spineseg_perfbench/models/: __init__.py  registry.py
spineseg_perfbench/optimization/: __init__.py  amp.py  compile.py  (+1 more)
tests/: conftest.py  test_benchmark.py  test_dice.py  test_freeze_artifacts.py  test_hd95.py  test_label_distribution_audit.py  test_manifests.py  test_optimization.py  test_robustness.py  test_run_controller.py  test_schema.py  test_smoke.py  test_verify_artifacts.py
(+283 files in other folders)
